[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://media/particle/Emissor.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://media/black.png" type="Texture" id=4]
[ext_resource path="res://media/yellow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 256, 899.967 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcadeButton" type="TextureButton" parent="Panel"]
margin_left = 305.158
margin_top = 303.0
margin_right = 588.158
margin_bottom = 352.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Emissor" parent="Panel/ArcadeButton" instance=ExtResource( 2 )]
position = Vector2( 150, 25 )

[node name="Label" type="Label" parent="Panel/ArcadeButton"]
custom_fonts/font = SubResource( 1 )
text = "ARCADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersusButton" type="TextureButton" parent="Panel"]
margin_left = 800.0
margin_top = 303.0
margin_right = 1073.0
margin_bottom = 349.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Emissor" parent="Panel/VersusButton" instance=ExtResource( 2 )]
position = Vector2( 130, 25 )

[node name="Label" type="Label" parent="Panel/VersusButton"]
custom_fonts/font = SubResource( 1 )
text = "VERSUS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlineButton" type="TextureButton" parent="Panel"]
margin_left = 1311.97
margin_top = 303.0
margin_right = 1602.97
margin_bottom = 355.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Emissor" parent="Panel/OnlineButton" instance=ExtResource( 2 )]
position = Vector2( 140, 25 )

[node name="Label" type="Label" parent="Panel/OnlineButton"]
custom_fonts/font = SubResource( 1 )
text = "ONLINE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="Panel"]
margin_left = 1080.0
margin_top = 560.0
margin_right = 1405.0
margin_bottom = 606.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Emissor" parent="Panel/OptionsButton" instance=ExtResource( 2 )]
position = Vector2( 150, 25 )

[node name="Label" type="Label" parent="Panel/OptionsButton"]
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Panel"]
margin_left = 588.131
margin_top = 560.0
margin_right = 783.131
margin_bottom = 606.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Emissor" parent="Panel/QuitButton" instance=ExtResource( 2 )]
position = Vector2( 95, 25 )

[node name="Label" type="Label" parent="Panel/QuitButton"]
custom_fonts/font = SubResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersusPanel" type="Node2D" parent="."]
visible = false

[node name="VersusBackGround" type="Sprite" parent="VersusPanel"]
modulate = Color( 1, 1, 1, 0.901961 )
scale = Vector2( 1920, 1080 )
texture = ExtResource( 4 )
centered = false

[node name="Selector" type="Sprite" parent="VersusPanel"]
position = Vector2( 0, 426 )
scale = Vector2( 1920, 64 )
texture = ExtResource( 5 )
centered = false

[node name="VSPlayerButton" type="TextureButton" parent="VersusPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 436.0
margin_right = 1920.0
margin_bottom = 481.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VersusPanel/VSPlayerButton"]
margin_right = 1920.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "VS PLAYER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSCOMButton" type="TextureButton" parent="VersusPanel"]
margin_top = 503.0
margin_right = 1920.0
margin_bottom = 548.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VersusPanel/VSCOMButton"]
margin_right = 1920.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "VS COM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingButton" type="TextureButton" parent="VersusPanel"]
margin_top = 567.0
margin_right = 1920.0
margin_bottom = 612.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VersusPanel/TrainingButton"]
margin_right = 1920.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "TRAINING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIMoveTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MainMenuSong" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="UIMoveSound" type="AudioStreamPlayer" parent="."]

[node name="UISelectSound" type="AudioStreamPlayer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 389.604
margin_top = 70.1287
margin_right = 1389.6
margin_bottom = 171.129
custom_fonts/font = SubResource( 2 )
text = "Game Title"
__meta__ = {
"_edit_use_anchors_": false
}
